SASRec and Caser baselines

--- a/fashion/other_baselines/create_sasrec_ctr_data.ipynb
+++ b/fashion/other_baselines/create_sasrec_ctr_data.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d2b77886-e18f-42ce-8cc6-d0b49706372b",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "740aabc7-8bd9-454e-b36d-a7c59add7fce",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3a96fdd0-8e06-436d-827b-d3f2ee8130d7",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "4     4     0     4.0  1453766400"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "66fa88a9-64d6-4463-a09e-ec5e45c4ddb1",
    "metadata": {},
    "outputs": [],
@@ -206,51 +206,82 @@
     "    \n",
     "    # sasrec_valid_dict['user'].append(user)\n",
     "    # sasrec_test_dict['user'].append(user)\n",
-    "\n",
-    "    user_rating_dict = ratings_df[ratings_df['user_id'] == user]\n",
-    "    print(f\"user_rating_dict: {user_rating_dict}\")\n",
+    "    user_int = int(user)\n",
+    "    user_rating_dict = ratings_df[ratings_df['user'] == user_int]\n",
+    "    # print(f\"user_rating_dict: {user_rating_dict}\")\n",
     "\n",
     "    # print(f\"All train_valid_test_movies: {train_valid_test_movies}\")\n",
     "\n",
-    "    train_valid_test_ratings = []\n",
-    "    for movie in train_valid_test_movies:\n",
-    "        movie_rating = user_rating_dict[user_rating_dict['movie_id'] == movie]['rating'].values[0]\n",
-    "        if movie_rating > 3:\n",
-    "            train_valid_test_ratings.append(1)\n",
-    "        else:\n",
-    "            train_valid_test_ratings.append(0)\n",
+    "    # train_valid_test_ratings = []\n",
+    "    # for movie in train_valid_test_movies:\n",
+    "    #     movie_rating = user_rating_dict[user_rating_dict['movie_id'] == movie]['rating'].values[0]\n",
+    "    #     if movie_rating > 3:\n",
+    "    #         train_valid_test_ratings.append(1)\n",
+    "    #     else:\n",
+    "    #         train_valid_test_ratings.append(0)\n",
     "    # print(f\"All train_valid_test_ratings: {train_valid_test_ratings}\")\n",
     "\n",
     "    ### SASRec Train Data\n",
-    "    sasrec_train_dict['user'].append(user)\n",
-    "    sasrec_train_dict['history_item_id'].append(train_valid_test_movies[-23:-3])\n",
-    "    sasrec_train_dict['history_rating'].append(train_valid_test_ratings[-23:-3])\n",
-    "    sasrec_train_dict['item_id'].append(train_valid_test_movies[-3])\n",
-    "    sasrec_train_dict['rating'].append(train_valid_test_ratings[-3])\n",
+    "    # print(\"SASRec Train Data\")\n",
+    "    # print(user_train_dict[user])\n",
+    "    sasrec_train_dict['user'].append(user_int)\n",
+    "    sasrec_train_dict['history_item_id'].append(user_train_dict[user][:-1])\n",
+    "    user_train_ratings = []\n",
+    "    for item in user_train_dict[user]:\n",
+    "        item_rating = user_rating_dict[user_rating_dict['item'] == item]['rating'].values[0]\n",
+    "        if item_rating > 3:\n",
+    "            user_train_ratings.append(1)\n",
+    "        else:\n",
+    "            user_train_ratings.append(0)\n",
+    "    sasrec_train_dict['history_rating'].append(user_train_ratings[:-1])\n",
+    "    sasrec_train_dict['item_id'].append(user_train_dict[user][-1])\n",
+    "    sasrec_train_dict['rating'].append(user_train_ratings[-1])\n",
     "    sasrec_train_dict['timestamp'].append(0)\n",
+    "    # print(\"sasrec_train_dict:\", sasrec_train_dict)\n",
     "\n",
     "    ### SASRec Valid Data\n",
-    "    sasrec_valid_dict['user'].append(user)\n",
-    "    sasrec_valid_dict['history_item_id'].append(train_valid_test_movies[-22:-2])\n",
-    "    sasrec_valid_dict['history_rating'].append(train_valid_test_ratings[-22:-2])\n",
-    "    sasrec_valid_dict['item_id'].append(train_valid_test_movies[-2])\n",
-    "    sasrec_valid_dict['rating'].append(train_valid_test_ratings[-2])\n",
+    "    # print(\"SASRec Valid Data\")\n",
+    "    # print(user_valid_dict[user])\n",
+    "    sasrec_valid_dict['user'].append(user_int)\n",
+    "    sasrec_valid_dict['history_item_id'].append(user_valid_dict[user][:-1])\n",
+    "    user_valid_ratings = []\n",
+    "    for item in user_valid_dict[user]:\n",
+    "        item_rating = user_rating_dict[user_rating_dict['item'] == item]['rating'].values[0]\n",
+    "        if item_rating > 3:\n",
+    "            user_valid_ratings.append(1)\n",
+    "        else:\n",
+    "            user_valid_ratings.append(0)\n",
+    "    sasrec_valid_dict['history_rating'].append(user_valid_ratings[:-1])\n",
+    "    sasrec_valid_dict['item_id'].append(user_valid_dict[user][-1])\n",
+    "    sasrec_valid_dict['rating'].append(user_valid_ratings[-1])\n",
     "    sasrec_valid_dict['timestamp'].append(0)\n",
+    "    # print(\"sasrec_valid_dict:\", sasrec_valid_dict)\n",
     "\n",
     "    ### SASRec Test Data\n",
-    "    sasrec_test_dict['user'].append(user)\n",
-    "    sasrec_test_dict['history_item_id'].append(train_valid_test_movies[-21:-1])\n",
-    "    sasrec_test_dict['history_rating'].append(train_valid_test_ratings[-21:-1])\n",
-    "    sasrec_test_dict['item_id'].append(train_valid_test_movies[-1])\n",
-    "    sasrec_test_dict['rating'].append(train_valid_test_ratings[-1])\n",
+    "    # print(\"SASRec Test Data\")\n",
+    "    # print(user_test_dict[user])\n",
+    "    sasrec_test_dict['user'].append(user_int)\n",
+    "    sasrec_test_dict['history_item_id'].append(user_test_dict[user][:-1])\n",
+    "    user_test_ratings = []\n",
+    "    for item in user_test_dict[user]:\n",
+    "        # print(item)\n",
+    "        item_rating = user_rating_dict[user_rating_dict['item'] == item]['rating'].values[0]\n",
+    "        if item_rating > 3:\n",
+    "            user_test_ratings.append(1)\n",
+    "        else:\n",
+    "            user_test_ratings.append(0)\n",
+    "    sasrec_test_dict['history_rating'].append(user_test_ratings[:-1])\n",
+    "    sasrec_test_dict['item_id'].append(user_test_dict[user][-1])\n",
+    "    sasrec_test_dict['rating'].append(user_test_ratings[-1])\n",
     "    sasrec_test_dict['timestamp'].append(0)\n",
+    "    # print(\"sasrec_test_dict:\", sasrec_test_dict)\n",
     "    # if cnt == 10:\n",
-    "    #     break"
+    "    # break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "2d23e481-429b-4b3d-bb65-62de820adf8d",
    "metadata": {},
    "outputs": [
@@ -258,11 +289,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sasrec_train_dict: 6040\n",
+      "sasrec_train_dict: 1273\n",
       "\n",
-      "    sasrec_valid_dict: 6040\n",
+      "    sasrec_valid_dict: 1273\n",
       "\n",
-      "    sasrec_test_dict: 6040\n",
+      "    sasrec_test_dict: 1273\n",
       "\n",
       "    \n"
      ]
@@ -285,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "d4ddde8d-dde0-4851-9b94-5f5917987d21",
    "metadata": {},
    "outputs": [],
@@ -304,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "f8f37e53-c420-47fd-a55d-76aedf44e0d6",
    "metadata": {},
    "outputs": [
@@ -319,42 +350,13 @@
     }
    ],
    "source": [
-    "train_data_path = './final_data/movie/train.csv'\n",
-    "valid_data_path = './final_data/movie/valid.csv'\n",
-    "test_data_path = './final_data/movie/test.csv'\n",
+    "train_data_path = './final_data/fashion/train.csv'\n",
+    "valid_data_path = './final_data/fashion/valid.csv'\n",
+    "test_data_path = './final_data/fashion/test.csv'\n",
     "\n",
     "save_to_csv(train_data_path, sasrec_train_dict)\n",
     "save_to_csv(valid_data_path, sasrec_valid_dict)\n",
     "save_to_csv(test_data_path, sasrec_test_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a78b28aa-8db3-411e-b7e2-845080b67ec1",
-   "metadata": {},
-   "source": [
-    "#### Getting unique number of items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "abfcfb7b-a3a1-4753-9e64-75492029449f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3706"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings_df.movie_id.nunique()"
    ]
   },
   {
