CTR Zeroshot results wo profile, wo description -- Created user profiles

--- a/fashion/ctr_zeroshot/evaluate.ipynb
+++ b/fashion/ctr_zeroshot/evaluate.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "928\n"
+      "1236\n"
      ]
     }
    ],
    "source": [
-    "inference_path = 'zeroshot_inference_valid.json'\n",
+    "inference_path = 'zeroshot_inference_test.json'\n",
     "with open(inference_path, 'r') as f:\n",
     "    inference_dict = json.load(f)\n",
     "print(len(inference_dict))"
@@ -151,9 +151,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 246 -- No: 666 -- Invalid: 16\n",
-      "invalid_users: ['60', '130', '256', '298', '440', '508', '547', '661', '677', '857', '887', '967', '991', '1098', '1108', '1229']\n",
-      "928\n"
+      "Yes: 554 -- No: 604 -- Invalid: 78\n",
+      "invalid_users: ['40', '49', '50', '55', '58', '64', '66', '68', '81', '99', '119', '125', '128', '131', '172', '174', '198', '213', '217', '218', '227', '235', '253', '265', '284', '306', '314', '317', '325', '353', '354', '360', '363', '397', '422', '450', '456', '476', '488', '509', '533', '542', '550', '585', '598', '612', '615', '629', '630', '637', '681', '688', '709', '714', '720', '736', '740', '743', '751', '772', '805', '808', '812', '883', '887', '957', '989', '1045', '1089', '1112', '1131', '1164', '1166', '1202', '1214', '1215', '1236', '1256']\n",
+      "1236\n"
      ]
     }
    ],
@@ -291,12 +291,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[225  65]\n",
-      " [462 496]]\n",
-      "AUC: 0.6468036858397522\n",
-      "Precision: 0.8841354723707665\n",
-      "Recall: 0.5177453027139874\n",
-      "Accuracy: 0.5777243589743589\n"
+      "[[253  36]\n",
+      " [429 518]]\n",
+      "AUC: 0.7112115111278378\n",
+      "Precision: 0.9350180505415162\n",
+      "Recall: 0.5469904963041182\n",
+      "Accuracy: 0.6237864077669902\n"
      ]
     }
    ],
