1. experiemnts for zeroshot w/description w/profile w/description,profile\n2. finetuning beauty

--- a/beauty/ctr_zeroshot_wo_description/evaluate.ipynb
+++ b/beauty/ctr_zeroshot_wo_description/evaluate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cd60e3f4-25e6-4bf0-9437-71e253e3a79b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "616\n"
+      "600\n"
      ]
     }
    ],
    "source": [
-    "inference_path = 'zeroshot_inference_valid.json'\n",
+    "inference_path = 'zeroshot_inference_test.json'\n",
     "with open(inference_path, 'r') as f:\n",
     "    inference_dict = json.load(f)\n",
     "print(len(inference_dict))"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4     4     0     5.0  1404604800"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -151,9 +151,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 469 -- No: 123 -- Invalid: 24\n",
-      "invalid_users: ['10', '31', '45', '86', '101', '146', '147', '180', '193', '209', '210', '245', '291', '326', '372', '393', '444', '447', '491', '520', '521', '541', '581', '593']\n",
-      "616\n"
+      "Yes: 281 -- No: 298 -- Invalid: 21\n",
+      "invalid_users: ['79', '86', '92', '98', '101', '129', '136', '180', '193', '200', '205', '233', '240', '310', '372', '383', '438', '523', '550', '581', '587']\n",
+      "600\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a940a4d4",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "33    21     4     5.0  1524614400"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
