--- a/beauty/finetune_reasoning_rec_2/reasoning_dataset/test_outputs.ipynb
+++ b/beauty/finetune_reasoning_rec_2/reasoning_dataset/test_outputs.ipynb
@@ -12,13 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_reasoning_path = './reasoning_data/reasoning_train_dict.pkl'\n",
     "with open(train_reasoning_path, 'rb') as f:\n",
     "    train_reasoning_dict = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n        1. The user profile shows that the user values durability and quality in their purchases. The user dislikes products that do not meet expectations, as seen with the 100% Cotton Premium Salon Towels. Despite being soft and thick, the towels unraveled after the first wash, which was disappointing for the user. The user seems to value durability and quality in their purchases.\\n        The user likes products that are long-lasting, good value for money, and have a lovely scent. The user dislikes products that have a weak scent or are drying to the skin.\\n        2. The user will like the Utopia Care Stainless Steel Fingernail Clipper because it is a high-quality product made of stainless steel, which is a durable material that will last a long time. The clipper has a unique shape and style, which the user values in their purchases. Although the clipper is larger than typical and has a swivel that can come out, it works great and resembles toenail clippers. However, the user values functionality and durability over aesthetics, and the clipper's quality and durability will meet\\nPrediction: Yes\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_reasoning_dict['1']"
    ]
   },
   {
