--- a/fashion/ctr_zeroshot_wo_description/evaluate.ipynb
+++ b/fashion/ctr_zeroshot_wo_description/evaluate.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "928\n"
+      "1248\n"
      ]
     }
    ],
    "source": [
-    "inference_path = 'zeroshot_inference_valid.json'\n",
+    "inference_path = 'zeroshot_inference_test.json'\n",
     "with open(inference_path, 'r') as f:\n",
     "    inference_dict = json.load(f)\n",
     "print(len(inference_dict))"
@@ -151,9 +151,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 377 -- No: 476 -- Invalid: 75\n",
-      "invalid_users: ['10', '21', '23', '121', '129', '157', '191', '201', '269', '270', '276', '305', '308', '372', '376', '383', '397', '407', '426', '458', '459', '482', '509', '512', '519', '598', '609', '618', '624', '629', '637', '640', '642', '653', '654', '660', '670', '675', '678', '700', '721', '723', '752', '788', '790', '793', '801', '813', '822', '848', '856', '874', '888', '891', '893', '904', '965', '971', '975', '1002', '1010', '1014', '1029', '1044', '1047', '1055', '1102', '1140', '1172', '1176', '1228', '1235', '1237', '1260', '1264']\n",
-      "928\n"
+      "Yes: 613 -- No: 572 -- Invalid: 63\n",
+      "invalid_users: ['34', '47', '64', '99', '123', '157', '158', '194', '213', '235', '253', '269', '294', '310', '327', '371', '387', '388', '395', '466', '501', '509', '513', '542', '571', '582', '584', '639', '642', '660', '670', '680', '681', '728', '730', '738', '775', '794', '826', '839', '874', '881', '892', '911', '932', '938', '989', '992', '1009', '1010', '1014', '1028', '1044', '1046', '1094', '1139', '1154', '1176', '1192', '1216', '1235', '1241', '1267']\n",
+      "1248\n"
      ]
     }
    ],
@@ -223,36 +223,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1453766400</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1500854400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
        "      <td>1</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1468195200</td>\n",
+       "      <td>1470096000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
+       "      <th>25</th>\n",
+       "      <td>25</td>\n",
        "      <td>2</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1462924800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>24</td>\n",
+       "      <th>33</th>\n",
+       "      <td>25</td>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1495065600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>24</td>\n",
+       "      <th>41</th>\n",
+       "      <td>25</td>\n",
        "      <td>4</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1509580800</td>\n",
@@ -263,11 +263,11 @@
       ],
       "text/plain": [
        "    item  user  rating   timestamp\n",
-       "6      6     0     2.0  1453766400\n",
-       "16    16     1     5.0  1468195200\n",
-       "24    24     2     4.0  1462924800\n",
-       "32    24     3     4.0  1495065600\n",
-       "40    24     4     5.0  1509580800"
+       "7      7     0     3.0  1500854400\n",
+       "17    17     1     5.0  1470096000\n",
+       "25    25     2     4.0  1462924800\n",
+       "33    25     3     4.0  1495065600\n",
+       "41    25     4     5.0  1509580800"
       ]
      },
      "execution_count": 5,
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "user_test_movie_rating_df = ratings_df.groupby('user').nth(-2)\n",
+    "user_test_movie_rating_df = ratings_df.groupby('user').nth(-1)\n",
     "user_test_movie_rating_df.head()"
    ]
   },
@@ -291,12 +291,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[161  81]\n",
-      " [390 296]]\n",
-      "AUC: 0.5483880683324097\n",
-      "Precision: 0.7851458885941645\n",
-      "Recall: 0.4314868804664723\n",
-      "Accuracy: 0.49245689655172414\n"
+      "[[221  69]\n",
+      " [414 544]]\n",
+      "AUC: 0.6649593261824202\n",
+      "Precision: 0.8874388254486134\n",
+      "Recall: 0.5678496868475992\n",
+      "Accuracy: 0.6129807692307693\n"
      ]
     }
    ],
