--- a/fashion/finetune_reasoning_rec_2/reasoning_dataset/test_outputs.ipynb
+++ b/fashion/finetune_reasoning_rec_2/reasoning_dataset/test_outputs.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n1. The user prefers long-sleeved shirts and knit fabric, appreciating good quality fabric and length, but also valuing comfort and simplicity. They enjoy a more formal or stylish clothing, favoring fitted styles and leggings as pairing items. The user dislikes casual clothing, and values sizing consistency and quality of material.\\n2. The user will dislike the next purchased item, DJT Cowl Neck Button Embellished Ruched Long Sleeve Blouse Top Grey XL, because it is a tunic top with a unique design and stylish cut, which may not align with the user's preference for formal or stylish clothing. The top is made of good quality material, but the tight fit, small sizes, and uncomfortable button placements may not meet the user's comfort and sizing expectations. The user's preference for long-sleeved shirts and knit fabric, as well as their dislike for casual clothing, suggests that they may not enjoy this product.\\nPrediction: No\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_reasoning_dict['0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "161.140625\n"
+      "160.56919642857142\n"
      ]
     }
    ],
@@ -43,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64,\n",
-       " dict_keys(['0', '1', '6', '7', '8', '9', '10', '11', '13', '14', '16', '18', '20', '21', '23', '25', '28', '30', '32', '34', '36', '37', '38', '39', '40', '45', '46', '47', '48', '49', '50', '52', '53', '54', '55', '56', '57', '58', '59', '60', '61', '63', '64', '65', '66', '67', '68', '69', '71', '74', '75', '76', '78', '81', '82', '83', '84', '85', '87', '88', '89', '90', '91', '92']))"
+       "(896,\n",
+       " dict_keys(['0', '1', '6', '7', '8', '9', '10', '11', '13', '14', '16', '18', '20', '21', '23', '25', '28', '30', '32', '34', '36', '37', '38', '39', '40', '45', '46', '47', '48', '49', '50', '52', '53', '54', '55', '56', '57', '58', '59', '60', '61', '63', '64', '65', '66', '67', '68', '69', '71', '74', '75', '76', '78', '81', '82', '83', '84', '85', '87', '88', '89', '90', '91', '92', '93', '95', '96', '97', '99', '102', '103', '104', '106', '107', '108', '109', '110', '111', '113', '114', '115', '116', '117', '118', '119', '121', '123', '124', '125', '126', '129', '130', '131', '132', '134', '135', '136', '138', '141', '143', '145', '146', '148', '149', '150', '151', '153', '155', '156', '157', '158', '159', '160', '161', '162', '163', '165', '167', '168', '169', '171', '172', '173', '174', '175', '176', '178', '179', '180', '181', '182', '183', '189', '190', '191', '192', '193', '194', '195', '198', '199', '200', '201', '206', '208', '209', '211', '213', '216', '217', '218', '219', '220', '221', '222', '224', '225', '226', '227', '230', '231', '232', '233', '234', '235', '237', '238', '239', '240', '241', '242', '244', '246', '247', '248', '249', '250', '252', '253', '255', '256', '259', '260', '261', '262', '263', '264', '265', '267', '268', '269', '270', '271', '273', '274', '276', '277', '278', '279', '280', '281', '282', '284', '289', '290', '291', '293', '294', '295', '296', '297', '298', '299', '300', '301', '302', '304', '305', '306', '308', '309', '310', '311', '312', '313', '314', '315', '316', '317', '319', '321', '322', '325', '326', '327', '328', '329', '330', '331', '332', '334', '335', '338', '339', '340', '341', '342', '344', '346', '347', '349', '350', '351', '353', '354', '355', '356', '357', '359', '360', '361', '362', '363', '364', '365', '368', '369', '371', '372', '373', '374', '375', '376', '377', '378', '379', '380', '381', '382', '383', '384', '385', '386', '387', '388', '389', '390', '391', '392', '393', '394', '395', '397', '398', '399', '402', '403', '404', '406', '407', '408', '409', '412', '414', '416', '417', '419', '420', '421', '422', '423', '425', '426', '428', '429', '430', '432', '433', '434', '436', '437', '438', '439', '440', '441', '442', '443', '444', '445', '446', '448', '449', '450', '451', '452', '453', '455', '456', '457', '458', '459', '460', '461', '462', '464', '466', '467', '468', '471', '474', '475', '476', '477', '478', '479', '480', '481', '482', '483', '486', '487', '488', '489', '490', '493', '494', '497', '498', '499', '500', '501', '502', '503', '508', '509', '512', '513', '518', '519', '520', '521', '522', '523', '524', '525', '528', '530', '532', '533', '534', '535', '536', '537', '539', '540', '541', '542', '543', '545', '546', '547', '548', '550', '551', '552', '554', '555', '556', '557', '558', '559', '562', '563', '568', '569', '570', '571', '577', '579', '580', '581', '582', '583', '584', '585', '588', '590', '592', '593', '596', '597', '598', '599', '601', '602', '603', '606', '607', '608', '609', '611', '612', '613', '615', '616', '617', '618', '619', '621', '622', '623', '624', '626', '627', '628', '629', '630', '632', '633', '636', '637', '638', '639', '640', '642', '643', '644', '645', '646', '649', '651', '652', '653', '654', '655', '657', '658', '659', '660', '661', '662', '663', '664', '665', '668', '669', '670', '671', '672', '673', '674', '675', '676', '677', '678', '679', '680', '681', '682', '683', '684', '685', '686', '687', '688', '689', '690', '693', '695', '697', '698', '699', '700', '701', '704', '705', '706', '707', '711', '712', '713', '714', '716', '717', '718', '721', '722', '723', '724', '725', '726', '728', '729', '730', '731', '734', '736', '737', '738', '740', '741', '742', '745', '748', '749', '751', '752', '755', '756', '757', '758', '759', '760', '762', '763', '764', '766', '767', '770', '772', '773', '774', '775', '778', '779', '780', '781', '782', '783', '785', '786', '787', '788', '789', '790', '793', '794', '796', '797', '798', '799', '801', '802', '803', '804', '805', '807', '808', '809', '811', '812', '813', '814', '815', '816', '818', '820', '822', '823', '824', '826', '827', '829', '830', '832', '833', '834', '838', '839', '840', '841', '842', '843', '845', '846', '848', '849', '850', '851', '852', '853', '855', '856', '857', '858', '859', '860', '861', '865', '866', '868', '869', '870', '871', '873', '874', '875', '876', '878', '879', '881', '882', '883', '884', '886', '887', '888', '890', '891', '892', '893', '896', '898', '899', '900', '901', '903', '904', '905', '907', '908', '911', '912', '913', '914', '915', '916', '917', '919', '920', '921', '922', '924', '925', '927', '928', '929', '930', '932', '934', '935', '936', '938', '939', '940', '941', '944', '945', '946', '947', '949', '950', '952', '953', '954', '955', '956', '957', '959', '960', '961', '963', '964', '965', '966', '967', '968', '969', '971', '973', '974', '975', '977', '980', '981', '982', '983', '986', '989', '990', '991', '992', '994', '996', '997', '998', '999', '1000', '1001', '1002', '1003', '1007', '1009', '1010', '1011', '1012', '1013', '1014', '1020', '1021', '1022', '1023', '1024', '1026', '1028', '1029', '1030', '1031', '1032', '1034', '1038', '1039', '1040', '1042', '1043', '1044', '1045', '1046', '1047', '1055', '1057', '1058', '1060', '1061', '1062', '1063', '1064', '1066', '1068', '1069', '1070', '1071', '1072', '1075', '1076', '1077', '1078', '1081', '1082', '1083', '1084', '1085', '1086', '1089', '1090', '1092', '1094', '1098', '1099', '1100', '1102', '1106', '1107', '1108', '1110', '1111', '1114', '1115', '1119', '1121', '1124', '1125', '1126', '1127', '1128', '1129', '1130', '1131', '1134', '1135', '1136', '1137', '1138', '1139', '1140', '1142', '1144', '1145', '1147', '1148', '1150', '1151', '1152', '1153', '1154', '1155', '1158', '1159', '1160', '1161', '1162', '1164', '1166', '1167', '1168', '1170', '1171', '1172', '1173', '1175', '1176', '1178', '1179', '1180', '1181', '1183', '1184', '1185', '1186', '1187', '1188', '1190', '1191', '1192', '1193', '1194', '1195', '1199', '1200', '1201', '1204', '1205', '1208', '1210', '1213', '1214', '1215', '1216', '1217', '1218', '1219', '1221', '1223', '1224', '1226', '1227', '1228', '1229', '1230', '1231', '1233', '1235', '1236', '1237', '1238', '1239', '1240', '1241', '1242', '1245', '1246', '1249', '1250', '1253', '1254', '1255']))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
