--- a/beauty/ctr_zeroshot_2_llama2/evaluate.ipynb
+++ b/beauty/ctr_zeroshot_2_llama2/evaluate.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a940a4d4",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "33    21     4     5.0  1524614400"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mixtral",
    "language": "python",
    "name": "python3"
   },
